--- a/000_references/marketing_research_and_analytics.bib
+++ b/000_references/marketing_research_and_analytics.bib
@@ -5,9 +5,9 @@
 	series = {Use {R}!},
 	title = {R {For} {Marketing} {Research} and {Analytics}},
 	isbn = {978-3-030-14316-9},
+	url = {https://doi-org.ezproxy.umng.edu.co/10.1007/978-3-030-14316-9},
 	publisher = {Springer International Publishing : Imprint: Springer},
 	author = {Chapman, Chris and Feit, Elea McDonnell},
 	year = {2019},
-	doi = {10.1007/978-3-030-14316-9},
 	keywords = {Marketing, Statistics, Statistics and Computing/Statistics Programs, Statistics for Business, Management, Economics, Finance, Insurance},
 }
