--- a/000_references/marketing_research_and_analytics.bib
+++ b/000_references/marketing_research_and_analytics.bib
@@ -1,13 +1,261 @@
 
+@misc{consejo_nacional_de_acreditacion_lineamientos_2021,
+	title = {Lineamientos y aspectos por evaluar para la acreditación en alta calidad de las instituciones de educación superior},
+	url = {https://www.cna.gov.co/1779/w3-article-404965.html?_noredirect=1},
+	author = {Consejo Nacional de Acreditación},
+	month = mar,
+	year = {2021},
+}
+
 @book{chapman_r_2019,
 	address = {Cham},
 	edition = {2nd ed. 2019},
 	series = {Use {R}!},
 	title = {R {For} {Marketing} {Research} and {Analytics}},
 	isbn = {978-3-030-14316-9},
-	url = {https://doi-org.ezproxy.umng.edu.co/10.1007/978-3-030-14316-9},
 	publisher = {Springer International Publishing : Imprint: Springer},
 	author = {Chapman, Chris and Feit, Elea McDonnell},
 	year = {2019},
-	keywords = {Marketing, Statistics, Statistics and Computing/Statistics Programs, Statistics for Business, Management, Economics, Finance, Insurance},
+	doi = {10.1007/978-3-030-14316-9},
+	keywords = {Statistics, Marketing, Statistics and Computing/Statistics Programs, Statistics for Business, Management, Economics, Finance, Insurance},
+}
+
+@techreport{iregui_guerrero_politica_2018,
+	title = {Política de formación para la investigación, la innovación y el emprendimiento},
+	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
+	urldate = {2023-05-15},
+	institution = {Universidad Militar Nueva Granada},
+	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
+	year = {2018},
+	doi = {10.18359/whitepaper.3750},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\Z2MHTXZC\\Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
+}
+
+@misc{wickham_r_2023,
+	title = {R for {Data} {Science} (2e)},
+	url = {https://r4ds.hadley.nz/},
+	urldate = {2023-05-15},
+	author = {Wickham, Hadley and Çetinkaya-Rundel, Mine and Grolemund, Garret},
+	year = {2023},
+	file = {R for Data Science (2e):C\:\\Users\\Usuario\\Zotero\\storage\\4TTPUDKB\\r4ds.hadley.nz.html:text/html},
+}
+
+@book{schwarz_python_2020,
+	address = {Cham, Switzerland},
+	title = {Python for marketing research and analytics},
+	isbn = {978-3-030-49720-0 978-3-030-49719-4},
+	language = {eng},
+	publisher = {Springer},
+	author = {Schwarz, Jason S. and Chapman, Chris and Feit, Elea McDonnell},
+	year = {2020},
+}
+
+@misc{mckinney_python_2023,
+	title = {Python for {Data} {Analysis}, {3E}},
+	url = {https://wesmckinney.com/book/},
+	language = {en},
+	urldate = {2023-05-15},
+	author = {Mckinney, Wes},
+	year = {2023},
+	file = {Snapshot:C\:\\Users\\Usuario\\Zotero\\storage\\2T82R6KV\\book.html:text/html},
+}
+
+@book{ismay_statistical_2020,
+	address = {Boca Raton London New York},
+	series = {The {R} series},
+	title = {Statistical inference via data science: a {ModernDive} into {R} and the tidyverse},
+	isbn = {978-0-367-40982-1 978-0-367-40987-6},
+	shorttitle = {Statistical inference via data science},
+	url = {https://moderndive.com/index.html},
+	language = {eng},
+	publisher = {CRC Press, Taylor \& Francis Group},
+	author = {Ismay, Chester and Kim, Albert Young-Sun},
+	year = {2020},
+	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\W3UHFSCB\\Ismay and Kim - 2020 - Statistical inference via data science a ModernDi.pdf:application/pdf},
+}
+
+@misc{posit_pbc_learning_2023,
+	title = {Learning {Python} for {Data} {Science} with {Posit} {Academy} - {YouTube}},
+	url = {https://www.youtube.com/live/IpUhSZPqTaE?feature=share&t=401},
+	urldate = {2023-06-18},
+	author = {Posit PBC},
+	month = may,
+	year = {2023},
+	file = {Learning Python for Data Science with Posit Academy - YouTube:C\:\\Users\\Usuario\\Zotero\\storage\\IF2XU2BD\\watch.html:text/html},
+}
+
+@article{hyndman_sample_1996,
+	title = {Sample {Quantiles} in {Statistical} {Packages}},
+	volume = {50},
+	issn = {00031305},
+	url = {https://www.jstor.org/stable/2684934?origin=crossref},
+	doi = {10.2307/2684934},
+	number = {4},
+	urldate = {2023-06-22},
+	journal = {The American Statistician},
+	author = {Hyndman, Rob J. and Fan, Yanan},
+	month = nov,
+	year = {1996},
+	pages = {361},
+}
+
+@book{florescu_handbook_2014,
+	address = {Hoboken, NJ},
+	series = {Wiley handbooks in applied statistics},
+	title = {Handbook of probability},
+	isbn = {978-1-118-59309-7 978-0-470-64727-1},
+	language = {eng},
+	publisher = {Wiley},
+	author = {Florescu, Ionuţ and Tudor, Ciprian A.},
+	year = {2014},
+	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\ZRR8XPM8\\Florescu and Tudor - 2014 - Handbook of probability.pdf:application/pdf},
+}
+
+@incollection{oldham_error_2008,
+	address = {New York, NY},
+	title = {The {Error} {Function} erf(x) and {Its} {Complement} erfc(x)},
+	isbn = {978-0-387-48806-6 978-0-387-48807-3},
+	url = {http://link.springer.com/10.1007/978-0-387-48807-3_41},
+	language = {en},
+	urldate = {2023-06-23},
+	booktitle = {An {Atlas} of {Functions}},
+	publisher = {Springer US},
+	author = {Oldham, Keith B. and Myland, Jan C. and Spanier, Jerome},
+	collaborator = {Oldham, Keit and Myland, Jan and Spanier, Jerome},
+	year = {2008},
+	doi = {10.1007/978-0-387-48807-3_41},
+	pages = {405--415},
+}
+
+@book{rice_mathematical_2021,
+	address = {New Delhi},
+	edition = {3rd ed., 9th Indian reprint},
+	title = {Mathematical statistics and data analysis},
+	isbn = {978-81-315-1954-7},
+	language = {eng},
+	publisher = {Cengage Learning},
+	author = {Rice, John A.},
+	year = {2021},
+	note = {OCLC: 1267963934},
+}
+
+@book{johnson_univariate_2005,
+	address = {Hoboken, N.J.},
+	edition = {3rd ed.},
+	title = {Univariate discrete distributions},
+	isbn = {978-0-471-27246-5},
+	abstract = {The Third Edition of the critically acclaimed Univariate Discrete Distributions addresses the latest advances in discrete distributions theory. New distributions, including q-series and generalized zeta-function distributions, are explored in detail},
+	language = {eng},
+	publisher = {Wiley-Interscience},
+	author = {Johnson, Norman Lloyd and Kemp, Adrienne W. and Kotz, Samuel},
+	year = {2005},
+	note = {OCLC: 85820604},
+}
+
+@book{johnson_continuous_1995,
+	address = {New York},
+	edition = {2nd ed},
+	series = {Wiley series in probability and mathematical statistics},
+	title = {Continuous univariate distributions},
+	volume = {2},
+	isbn = {978-0-471-58494-0},
+	publisher = {Wiley},
+	author = {Johnson, Norman Lloyd and Kotz, Samuel and Balakrishnan, Narayanaswamy},
+	month = may,
+	year = {1995},
+	keywords = {Distribution (Probability theory)},
+}
+
+@book{blom_statistical_1958,
+	title = {Statistical estimates and transformed beta-variables},
+	publisher = {Wiley},
+	author = {Blom, Gunnar},
+	year = {1958},
+}
+
+@article{hoaglin_hat_1978,
+	title = {The {Hat} {Matrix} in {Regression} and {ANOVA}},
+	volume = {32},
+	issn = {00031305},
+	url = {https://www.jstor.org/stable/2683469?origin=crossref},
+	doi = {10.2307/2683469},
+	number = {1},
+	urldate = {2023-11-03},
+	journal = {The American Statistician},
+	author = {Hoaglin, David C. and Welsch, Roy E.},
+	month = feb,
+	year = {1978},
+	pages = {17},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\V5K4X2VI\\Hoaglin and Welsch - 1978 - The Hat Matrix in Regression and ANOVA.pdf:application/pdf},
+}
+
+@book{greene_econometric_2018,
+	address = {New York, NY},
+	edition = {Eighth edition},
+	title = {Econometric analysis},
+	isbn = {978-0-13-446136-6},
+	language = {eng},
+	publisher = {Pearson},
+	author = {Greene, William},
+	year = {2018},
+}
+
+@book{greenacre_biplots_2010,
+	address = {Bilbao},
+	title = {Biplots in practice},
+	isbn = {978-84-923846-8-6},
+	url = {https://www.fbbva.es/microsite/multivariate-statistics/biplots.html},
+	language = {eng},
+	publisher = {Fundación BBVA},
+	author = {Greenacre, Michael J.},
+	year = {2010},
+	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\I5CJZALZ\\Greenacre - 2010 - Biplots in practice.pdf:application/pdf},
+}
+
+@book{deza_encyclopedia_2016,
+	address = {Berlin, Heidelberg},
+	title = {Encyclopedia of {Distances}},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {978-3-662-52843-3 978-3-662-52844-0},
+	url = {http://link.springer.com/10.1007/978-3-662-52844-0},
+	language = {en},
+	urldate = {2024-05-06},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Deza, Michel Marie and Deza, Elena},
+	year = {2016},
+	doi = {10.1007/978-3-662-52844-0},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\JJW8FH4S\\Deza and Deza - 2016 - Encyclopedia of Distances.pdf:application/pdf},
+}
+
+@book{kaufman_finding_1990,
+	edition = {1},
+	series = {Wiley {Series} in {Probability} and {Statistics}},
+	title = {Finding {Groups} in {Data}: {An} {Introduction} to {Cluster} {Analysis}},
+	copyright = {http://doi.wiley.com/10.1002/tdm\_license\_1.1},
+	isbn = {978-0-471-87876-6 978-0-470-31680-1},
+	shorttitle = {Finding {Groups} in {Data}},
+	url = {https://onlinelibrary.wiley.com/doi/book/10.1002/9780470316801},
+	language = {en},
+	urldate = {2024-05-07},
+	publisher = {Wiley},
+	author = {Kaufman, Leonard and Rousseeuw, Peter J.},
+	month = mar,
+	year = {1990},
+	doi = {10.1002/9780470316801},
+}
+
+@article{stevens_theory_1946,
+	title = {On the {Theory} of {Scales} of {Measurement}},
+	volume = {103},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.103.2684.677},
+	doi = {10.1126/science.103.2684.677},
+	language = {en},
+	number = {2684},
+	urldate = {2024-05-08},
+	journal = {Science},
+	author = {Stevens, S. S.},
+	month = jun,
+	year = {1946},
+	pages = {677--680},
 }
