--- a/000_slides_R/001_b_business_case.tex
+++ b/000_slides_R/001_b_business_case.tex
@@ -700,7 +700,11 @@
   \href{https://posit.co/products/open-source/rstudio/}{\textbf{RStudio
   IDE}}, \href{https://quarto.org/}{\textbf{Quarto}} and the authors and
   maintainers of the packages
-  \href{https://CRAN.R-project.org/package=tidyverse}{\textbf{tidyverse}}
+  \href{https://CRAN.R-project.org/package=tidyverse}{\textbf{tidyverse}},
+  \href{https://CRAN.R-project.org/package=tigris}{\textbf{tigris}},
+  \href{https://CRAN.R-project.org/package=janitor}{\textbf{janitor}},
+  \href{https://CRAN.R-project.org/package=sweep}{\textbf{sweep}},
+  \href{https://CRAN.R-project.org/package=kableExtra}{\textbf{kableExtra}}
   and
   \href{https://CRAN.R-project.org/package=tinytex}{\textbf{tinytex}}
   for allowing me to access these tools without paying for a license
