Adding references break session 4

--- a/000_slides_R/004_relationships_between_continuous_variables.qmd
+++ b/000_slides_R/004_relationships_between_continuous_variables.qmd
@@ -462,4 +462,4 @@ customer |>
 
 -   To the [**Linux kernel community**](https://www.kernel.org/category/about.html) for allowing me the possibility to use some [**Linux distributions**](https://static.lwn.net/Distributions/) as my main [**OS**](https://en.wikipedia.org/wiki/Operating_system) without paying for a license
 
-# References
+# References {.allowframebreaks}
