--- a/000_slides_R/004_relationships_between_continuous_variables.tex
+++ b/000_slides_R/004_relationships_between_continuous_variables.tex
@@ -1114,7 +1114,7 @@ and \(\bar{y} = \sum_{i=1}^n y_i\)
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
 
-\begin{frame}{References}
+\begin{frame}[allowframebreaks]{References}
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-chapman_r_2019}
