--- a/000_slides_R/006_comparing_groups_statistical_tests.tex
+++ b/000_slides_R/006_comparing_groups_statistical_tests.tex
@@ -1518,7 +1518,12 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
   \href{https://posit.co/products/open-source/rstudio/}{\textbf{RStudio
   IDE}}, \href{https://quarto.org/}{\textbf{Quarto}} and the authors and
   maintainers of the packages
-  \href{https://CRAN.R-project.org/package=tidyverse}{\textbf{tidyverse}}
+  \href{https://CRAN.R-project.org/package=tidyverse}{\textbf{tidyverse}},
+  \href{https://CRAN.R-project.org/package=skimr}{\textbf{skimr}},
+  \href{https://CRAN.R-project.org/package=latex2exp}{\textbf{latex2exp}},
+  \href{https://CRAN.R-project.org/package=tidymodels}{\textbf{tidymodels}},
+  \href{https://CRAN.R-project.org/package=patchwork}{\textbf{patchwork}},
+  \href{https://CRAN.R-project.org/package=hardhat}{\textbf{hardhat}}
   and
   \href{https://CRAN.R-project.org/package=tinytex}{\textbf{tinytex}}
   for allowing me to access these tools without paying for a license
