Adding slides session 8

--- a/000_references/marketing_research_and_analytics.bib
+++ b/000_references/marketing_research_and_analytics.bib
@@ -12,6 +12,18 @@
 	keywords = {Statistics, Marketing, Statistics and Computing/Statistics Programs, Statistics for Business, Management, Economics, Finance, Insurance},
 }
 
+@book{greenacre_biplots_2010,
+	address = {Bilbao},
+	title = {Biplots in practice},
+	isbn = {978-84-923846-8-6},
+	url = {https://www.fbbva.es/microsite/multivariate-statistics/biplots.html},
+	language = {eng},
+	publisher = {Fundación BBVA},
+	author = {Greenacre, Michael J.},
+	year = {2010},
+	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\I5CJZALZ\\Greenacre - 2010 - Biplots in practice.pdf:application/pdf},
+}
+
 @techreport{iregui_guerrero_politica_2018,
 	title = {Política de formación para la investigación, la innovación y el emprendimiento},
 	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
