Adding slides session 9

--- a/000_references/marketing_research_and_analytics.bib
+++ b/000_references/marketing_research_and_analytics.bib
@@ -24,6 +24,54 @@
 	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\I5CJZALZ\\Greenacre - 2010 - Biplots in practice.pdf:application/pdf},
 }
 
+@book{deza_encyclopedia_2016,
+	address = {Berlin, Heidelberg},
+	title = {Encyclopedia of {Distances}},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {978-3-662-52843-3 978-3-662-52844-0},
+	url = {http://link.springer.com/10.1007/978-3-662-52844-0},
+	language = {en},
+	urldate = {2024-05-06},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Deza, Michel Marie and Deza, Elena},
+	year = {2016},
+	doi = {10.1007/978-3-662-52844-0},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\JJW8FH4S\\Deza and Deza - 2016 - Encyclopedia of Distances.pdf:application/pdf},
+}
+
+@book{kaufman_finding_1990,
+	edition = {1},
+	series = {Wiley {Series} in {Probability} and {Statistics}},
+	title = {Finding {Groups} in {Data}: {An} {Introduction} to {Cluster} {Analysis}},
+	copyright = {http://doi.wiley.com/10.1002/tdm\_license\_1.1},
+	isbn = {978-0-471-87876-6 978-0-470-31680-1},
+	shorttitle = {Finding {Groups} in {Data}},
+	url = {https://onlinelibrary.wiley.com/doi/book/10.1002/9780470316801},
+	language = {en},
+	urldate = {2024-05-07},
+	publisher = {Wiley},
+	author = {Kaufman, Leonard and Rousseeuw, Peter J.},
+	month = mar,
+	year = {1990},
+	doi = {10.1002/9780470316801},
+}
+
+@article{stevens_theory_1946,
+	title = {On the {Theory} of {Scales} of {Measurement}},
+	volume = {103},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.103.2684.677},
+	doi = {10.1126/science.103.2684.677},
+	language = {en},
+	number = {2684},
+	urldate = {2024-05-08},
+	journal = {Science},
+	author = {Stevens, S. S.},
+	month = jun,
+	year = {1946},
+	pages = {677--680},
+}
+
 @techreport{iregui_guerrero_politica_2018,
 	title = {Política de formación para la investigación, la innovación y el emprendimiento},
 	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
