Using package DT to render tables

--- a/000_specific_instructions/001_specific_instructions_marketing_report_part_1.qmd
+++ b/000_specific_instructions/001_specific_instructions_marketing_report_part_1.qmd
@@ -77,7 +77,8 @@ bike_sales |>
          order.id, order.line, 
          quantity, price,
          customer.id, bikeshop.name,
-         model)
+         model) |> 
+  datatable()
 ```
 
 You can use the following command inside RStudio IDE to inspect all the columns as a spreadsheet:
